--- a/.tmp/styles/main.css
+++ b/.tmp/styles/main.css
@@ -9,6 +9,17 @@ html a,
 html input,
 html select {
   font-family: Monospace, Helvetica, Arial, sans-serif;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.show {
+  display: block!important;
+}
+.hidden {
+  display: none!important;
 }
 body {
   background: #161616;
@@ -23,11 +34,23 @@ option {
   color: #069606;
   margin: 8px 0 0 0;
 }
-input:hover,
-select:hover,
-option:hover {
+input[type=button]:hover {
   background: #069606;
   color: #161616;
+}
+/* common styles */
+.col6 {
+  width: 48%;
+  display: inline-block;
+}
+.pull-right {
+  float: right;
+}
+.pull-left {
+  float: left;
+}
+.clear {
+  clear: both;
 }
 /*#############
 #   HEADER    #
@@ -50,14 +73,25 @@ option:hover {
 /*##############
 #   OPTIONS    #
 ##############*/
-.options {
+#options {
   border-top: 6px solid #069606;
   height: 10%;
 }
-.options .row {
+#options #steps,
+#options #volume {
+  width: 86px;
+  font-size: 16px;
+}
+#options > div {
+  display: none;
+}
+#options .p30 {
+  width: 30%;
+}
+#options .row {
   padding-left: 10px;
 }
-.options .row span {
+#options .row span {
   min-width: 160px;
   position: relative;
   display: inline-block;
@@ -70,76 +104,93 @@ option:hover {
   border: 0;
   padding: 0;
   margin: 0;
-}
-#ptnPosition {
-  width: 98%;
-  height: 3px;
-  background: #069606;
-  position: relative;
-  z-index: 9999;
-  top: 0px;
-  -webkit-animation-name: ptnPosAni;
-  -webkit-animation-duration: 1.75s;
-  -webkit-animation-timing-function: linear;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-play-state: running;
-  /* Standard syntax */
-  -webkit-animation-name: ptnPosAni;
-  animation-name: ptnPosAni;
-  -webkit-animation-duration: 1.75s;
-  animation-duration: 1.75s;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -webkit-animation-play-state: running;
-  animation-play-state: running;
-}
-@-webkit-keyframes ptnPosAni {
-  0% {
-    top: 0px;
-  }
-  100% {
-    top: 100px;
-  }
-}
-@keyframes ptnPosAni {
-  0% {
-    top: 0px;
-  }
-  100% {
-    top: 100px;
-  }
-}
-#pattern {
-  border-left: 2px solid #069606;
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-#pattern .data {
-  border-top: 6px solid #069606;
-  width: 99%;
-  position: relative;
-  height: 80%;
-  overflow-y: scroll;
-}
-#pattern .data tr.active {
+  font-size: 16px;
   background: #069606;
   color: #161616;
 }
-#pattern .data table td,
-#pattern .data table th {
+#data {
+  border-top: 6px solid #069606;
+  display: inline-block;
+  position: relative;
+  height: 80%;
+}
+#data tr.active {
+  color: grey;
+}
+#data table td,
+#data table th {
   border-right: 1px solid #069606;
   margin: 0;
 }
-#pattern .data table thead th {
+#data table thead th {
   border-bottom: 6px solid #069606;
   cursor: pointer;
 }
-#pattern .data table tbody td {
+#data table tbody td {
   border-bottom: 1px dashed #069606;
   cursor: pointer;
+}
+/*##############
+#   FUNCTION   #
+##############*/
+.functWrap span,
+.functWrap input {
+  margin: 12px 0;
+  font-size: 16px;
+}
+.functWrap .btn {
+  width: 10%;
+  float: left;
+  height: 21px;
+}
+.functWrap input {
+  width: 89%;
+  float: right;
+  height: 15px;
+}
+/*##############
+#     SONG     #
+##############*/
+.sngWrap .chWrap {
+  padding: 4px 0 12px 0;
+  overflow-x: scroll;
+}
+.sngWrap .chWrap span {
+  font-size: 54px;
+}
+.sngWrap .chWrap .dropable {
+  white-space: nowrap;
+  display: inline-block;
+  margin: 4px 2px;
+  padding: 0 2px;
+  min-width: 100%;
+}
+.draggable {
+  white-space: pre-line;
+  overflow: hidden;
+  border: 1px solid green;
+  display: inline-block;
+  padding: 2px;
+  text-align: left;
+  word-break: break-all;
+  height: 38px;
+}
+/*##############
+#     Canvas     #
+##############*/
+#canvasVisual {
+  float: right;
+  border: 2px solid #069606;
+}
+#docs {
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 41px;
+  left: 0;
+  z-index: 99999;
+  background: rgba(0, 0, 0, 0.65);
+  text-align: center;
+  overflow-y: scroll;
 }
