--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -10,7 +10,14 @@
 
 html, html a, html input, html select {
   font-family: Monospace, Helvetica, Arial, sans-serif;
+    -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
 }
+
+.show { display: block!important; }
+.hidden { display: none!important; }
 
 body {
   background: @bg;
@@ -23,11 +30,21 @@ input, select, option {
     background: @bg;
     color: @fg;
     margin: 8px 0 0 0;
+}
+
+input[type=button] {
   &:hover {
     background: @fg;
     color: @bg;
   }
 }
+
+/* common styles */ 
+
+.col6 { width: 48%; display: inline-block; }
+.pull-right { float: right; }
+.pull-left { float: left; }
+.clear { clear: both; }
 
 /*#############
 #   HEADER    #
@@ -45,9 +62,15 @@ input, select, option {
 /*##############
 #   OPTIONS    #
 ##############*/
-.options {
+
+#options {
+  #steps, #volume { width: 86px; font-size: 16px;}
+  &>div { display: none; }
   border-top: 6px solid @fg;
   height:10%;
+  .p30{
+    width:30%;
+  }
   .row {
     padding-left: 10px;
     span {
@@ -67,70 +90,109 @@ input, select, option {
   border:0;
   padding:0;
   margin:0;
-}
-
-#ptnPosition {
-  width: 98%;
-  height: 3px;
+  font-size: 16px;
   background: @fg;
+  color: @bg;
+}
+
+#data {
+  border-top: 6px solid @fg;
+  display: inline-block;
   position: relative;
-  z-index: 9999;
-  top: 0px;
-  -webkit-animation-name: ptnPosAni;
-  -webkit-animation-duration: 1.75s;
-  -webkit-animation-timing-function: linear;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-play-state: running;
-  /* Standard syntax */
-  animation-name: ptnPosAni;
-  animation-duration: 1.75s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  animation-play-state: running;
+  height: 80%;
+
+  tr.active {
+    color: grey;
+  }
+
+  table td, table th {
+    border-right: 1px solid @fg;
+    margin: 0;
+    //padding: 2px 8px;
+    // width: 7.692%;
+    // display: inline-block;
+  }
+  table thead th {
+    border-bottom: 6px solid @fg;
+    cursor: pointer;
+  }
+
+  table tbody td {
+    border-bottom: 1px dashed @fg;
+    cursor: pointer;
+  }
 }
 
-@keyframes ptnPosAni {
-    0%   {top:0px;}
-    100% {top:100px;}
+/*##############
+#   FUNCTION   #
+##############*/
+
+.functWrap {
+  span, input {
+    margin: 12px 0;
+    font-size: 16px;
+  }
+  .btn {
+    width: 10%;
+    float: left;
+    height: 21px;
+  }
+  input {
+    width: 89%;
+    float: right;
+    height: 15px;
+  }
 }
 
-#pattern {
-    border-left: 2px solid @fg;
-    height:100%;
-    //position: fixed;
-    width: 100%;
-    margin:0;padding:0;
-    box-sizing: border-box;
+/*##############
+#     SONG     #
+##############*/
 
-    .data {
-      border-top: 6px solid @fg;
-      width: 99%;
-      position: relative;
-      height: 80%;
-      overflow-y: scroll;
-
-      tr.active {
-        background: @fg;
-        color: @bg;
-      }
-
-      table td, table th {
-        border-right: 1px solid @fg;
-        margin: 0;
-        //padding: 2px 8px;
-        // width: 7.692%;
-        // display: inline-block;
-      }
-      table thead th {
-        border-bottom: 6px solid @fg;
-        cursor: pointer;
-      }
-
-      table tbody td {
-        border-bottom: 1px dashed @fg;
-        cursor: pointer;
-      }
+.sngWrap {
+  .chWrap {
+    padding:4px 0 12px 0;
+    overflow-x: scroll;
+    span { font-size: 54px;}
+    .dropable {
+      white-space: nowrap;
+      display: inline-block;
+      margin: 4px 2px;
+      padding: 0 2px;
+      min-width: 100%;
     }
+  }
+}
+.draggable{
+  white-space: pre-line;
+  overflow: hidden;
+  border: 1px solid green;
+  display: inline-block;
+  padding: 2px;
+  text-align: left;
+  word-break: break-all;
+  height: 38px;
 }
 
+/*##############
+#     Canvas     #
+##############*/
 
+#canvasVisual {
+  float: right;
+  border: 2px solid @fg;
+}
+
+// DOCS
+
+#docs {
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 41px;
+  left: 0;
+  z-index: 99999;
+  background: rgba(0,0,0,0.65);
+  text-align: center;
+  overflow-y:scroll;
+}
