--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -63,23 +63,40 @@ input[type=button].active {
   text-align: center;
   width: 100%;
 }
-#header input,
-#header select,
-#header option {
-  border-bottom: 0 solid #069606;
+#header ul {
+  left: 0;
+  font-size: 13px;
+  position: absolute;
+  display: inline-block;
+  list-style-type: none;
+  margin: 8px 0 0 0;
+  padding: 2px;
+  list-style: none;
+  border: 2px solid #069606;
+  width: 104px;
+  z-index: 999;
+  color: #069606;
+  background: #161616;
 }
-#header #selectItems {
-  float: left;
+#header ul:hover > li {
+  display: block;
+  color: #161616;
 }
-#header #new {
-  float: right;
+#header li {
+  display: none;
+}
+#header li:hover {
+  display: block;
+}
+#header li input {
+  border: 0;
 }
 /*##############
 #   OPTIONS    #
 ##############*/
 #options {
-  border-top: 6px solid #069606;
-  height: 10%;
+  margin: 12px 0;
+  border-top: 2px solid #069606;
 }
 #options #steps,
 #options #volume {
@@ -113,10 +130,9 @@ input[type=button].active {
   color: #161616;
 }
 #data {
-  border-top: 6px solid #069606;
+  border-top: 2px solid #069606;
   display: inline-block;
   position: relative;
-  height: 80%;
 }
 #data tr.active {
   color: grey;
@@ -125,6 +141,7 @@ input[type=button].active {
 #data table th {
   border-right: 1px solid #069606;
   margin: 0;
+  padding: 2px 8px;
 }
 #data table thead th {
   border-bottom: 6px solid #069606;
@@ -137,20 +154,33 @@ input[type=button].active {
 /*##############
 #   FUNCTION   #
 ##############*/
-.functWrap span,
+.functWrap {
+  position: relative;
+  display: inline;
+  width: 100%;
+}
 .functWrap input {
-  margin: 12px 0;
   font-size: 16px;
-}
-.functWrap .btn {
-  width: 10%;
-  float: left;
-  height: 21px;
-}
-.functWrap input {
-  width: 89%;
+  margin: 0.5%;
+  padding: 0.5%;
+  width: 81%;
   float: right;
   height: 15px;
+}
+.functWrap .btn {
+  font-size: 16px;
+  width: 9.5%;
+  float: left;
+}
+.functWrap .remove {
+  width: 3%;
+  float: left;
+  height: 26px;
+  padding: 0;
+}
+.btn.btn-new {
+  margin: 1%;
+  width: 98%;
 }
 /*##############
 #     SONG     #
@@ -183,7 +213,7 @@ input[type=button].active {
 #     Canvas     #
 ##############*/
 #canvasVisual {
-  float: right;
+  margin-top: 9px;
   border: 2px solid #069606;
 }
 #docs {
